person address selection in Other Vehicle Purchase, Manage services by category, manual recharge, validations in User Profile

--- a/WebClient/src/components/commonComponents/viewAddressComponent/viewAddressComponent.template.html
+++ b/WebClient/src/components/commonComponents/viewAddressComponent/viewAddressComponent.template.html
@@ -1,7 +1,7 @@
-<div class="" v-if="addressDetails">
+<div class="" v-if="addressDetails" @click="selectAddress">
     <div class="col-md-12">
         <div class="">
-            <div class="pull-right">
+            <div class="pull-right" v-if="!disabled">
                 <input type="checkbox" :disabled="addressDetails.IsDefault == 1 ? true: false" :checked="addressDetails.IsDefault" v-model="addressDetails.IsDefault" @click="changeDefaultAddress($event)">
                 <span class="pauseSubscribe" style="margin-right: 5px;" @click="editAddress">
                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
