--- a/WebClient/src/components/myaccount/orderRowComponent/orderRowComponent.template.html
+++ b/WebClient/src/components/myaccount/orderRowComponent/orderRowComponent.template.html
@@ -6,7 +6,7 @@
         {{orderDetails.ServiceName}}
     </td>
     <td class="form-group">
-        ₹ {{orderDetails.ServiceType == 1 ? orderDetails.SubscriptionPrice : orderDetails.Price}}
+        ₹ {{price}}
     </td>
     <td class="form-group">
         {{orderDetails.Quantity}}
