--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -36,11 +36,17 @@
                 <li @click="redirectToMyOrders" v-if="userRole === 2">
                     My Orders
                 </li>
+                <li @click="redirectToMySubscriptions" v-if="userRole === 2">
+                    My Subscriptions
+                </li>
                 <li @click="redirectToMyProducts" v-if="userRole === 2">
                     My Products
                 </li>
                 <li @click="redirectToRequestMaterial" v-if="userRole === 3">
                     Material Request
+                </li>                
+                <li @click="redirectToUsersWallet" v-if="userRole === 0">
+                    Users Wallet
                 </li>
                 <li @click="redirectToCompanyAssets" v-if="userRole === 3">
                     Company Assests with Me
