--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -4354,7 +4354,7 @@ table.table-bordered tbody tr:hover {
     -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 1);
     box-shadow: 0px 1px 3px -1px rgba(0, 0, 0, 1);
-    color: #4d6fe0;
+    color: #fff;
     font-weight: 500;
 }
 
@@ -12786,3 +12786,6 @@ body {
   }
 
   
+.chooseAddress div{
+    cursor: pointer;
+}
