Wallet history and date issue and other service is not displayed to service person

--- a/WebClient/src/components/myaccount/myOrders/myOrders.template.html
+++ b/WebClient/src/components/myaccount/myOrders/myOrders.template.html
@@ -59,7 +59,8 @@
                                     <th>Amount</th>
                                     <th>Quantity</th>
                                     <th>Product Name</th>
-                                    <th>Status</th>                                    
+                                    <th>Status</th> 
+                                    <th>Notes</th>                                   
                                 </thead>
                                 <tbody class="myordersTable">                                    
                                         <orderRowComponent v-for="product in inactiveOrders" :orderId="product.RequestId" disableActions="true"></orderRowComponent>
