--- a/WebClient/src/components/myaccount/orderRowComponent/orderRowComponent.template.html
+++ b/WebClient/src/components/myaccount/orderRowComponent/orderRowComponent.template.html
@@ -31,8 +31,8 @@
             @click="addDetailsToPauseResume(orderDetails)" style="cursor: pointer;">
             <i class="far fa-play-circle"></i>
         </span>
-
-
-
+    </td>
+    <td>
+        {{orderDetails.ServiceNotes}}
     </td>
 </tr>
