--- a/WebClient/src/components/myaccount/myaccountHome/myAccountHome.template.html
+++ b/WebClient/src/components/myaccount/myaccountHome/myAccountHome.template.html
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div class="card zoomIn animated cardWithConfig">
+        <div class="card zoomIn animated cardWithConfig" @click="navigateToMyWallet">
             <div class="orgLogo">
                 <!-- <img v-if="personOrg.orgLogo" :src="'/renderImage/' + personOrg.orgLogo + '/50x50'" /> -->
                 <!-- <span class="orgDummyLogo" v-else></span> -->
