--- a/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
+++ b/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
@@ -16,7 +16,7 @@
         <div class="" v-for="product in servieList" style="border: 1px solid #65ff00">
             <div class="row">
                 <div class="col-md-10">
-                    {{product.AddressLine1}}
+                    {{product.OtherAddressId ? product.OtherAddressLine1 : product.AddressLine1}}
                 </div>
                 <div class="col-md-2">
                     <input type="checkbox" v-model="product.checked" @click="taskStatusChangePopup(product)">
@@ -31,8 +31,12 @@
                 </div>
                 <div class="col-md-4">
                     {{product.VehicleNumber}}
+                </div>                
+            </div>
+            <div class="row" v-if="product.OtherAddressId">
+                <div class="col-md-12">
+                    Quantity: {{product.Quantity}}
                 </div>
-
             </div>
         </div>
     </div>
