subscribe items generate for Frequency

--- a/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
+++ b/WebClient/src/components/homeModule/adminHomePageComponent/adminHomePageComponent.template.html
@@ -36,7 +36,7 @@
                                             <th>Vehicle Number</th>
                                         </thead>
                                         <tbody>
-                                            <tr v-for="service in services" style="height: 50px;">
+                                            <tr v-for="service in services" style="height: 50px;" v-if="service.ServiceType == 2 || (service.ServiceType == 1 && service.ParentId)">
                                                 <td>
                                                     <assignPersonComponent :service="service"
                                                         :updateServicePerson="updateServicePerson">
