--- a/WebClient/src/assets/css/login.css
+++ b/WebClient/src/assets/css/login.css
@@ -8,6 +8,10 @@ body{
     background-repeat: no-repeat;
     font-family: 'Roboto';
 }
+.header{
+    font-size: 25px;
+    font-weight: bold;
+}
 .overlay-color{
     background: rgba(77, 112, 224, 0.30);
     height: 100vh;
@@ -17,7 +21,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 75vh;
+  
 }
 .loginBoxDiv h1{
     font-size: 35px;
@@ -56,12 +60,18 @@ body{
     width: 100% !important;
     margin: 20px 0 0 0 !important;
 }
+.login-style{
+    margin-top:13vh;
+}
+.form-styles{
+    height: 100%;
+    overflow-x: scroll;
+}
 .loginBoxDiv form input[type="submit"],  input[type="button"]{
     width: 50%;
     border: none;
     outline: none;
     padding: 10px;
-    color: #fff;
     font-size: 15px;
     border-radius: 3px;
     margin: 20px 0 0 0;
@@ -99,14 +109,31 @@ body{
     width: 200px
 }
 
+
 .loginButton{
-    background-color: #3c763d;
+    background-color:  #1C3957 ;
+    color:#FAC705;
 }
-.registerButton{
-    background-color: #337ab7;
+.btm-btn{
+    display: flex;
+    justify-content: space-between;
+}
+.side-login{
+    display: flex;
+    
+}
+.side-btn{
+    width: 50%;    
+}
+.adjbtn{
+    width:70%;
 }
 .brandLogo{
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+    background: #1C3957;
+    color: #FAC705;
     height: 10vh;
 }
 /* @media only screen and (max-width: 600px) {
@@ -119,13 +146,23 @@ body{
     /* height: 65vh; */
 }
 .innerForm{
-    height: 100%;
     width: 100%;
     background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 95vh;
 }
 .adsBanner{
-    height: 25vh;
-    background: #b8ccd6;
+  position: relative;
+  height: 25vh;
+}
+.banner-dots{
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    right: 0;
 }
 
 .loginScreen button{
@@ -155,9 +192,10 @@ body{
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: #FAC705;
   font-weight: bold;
   font-size: 18px;
+  background:  #1C3957;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -197,8 +235,8 @@ body{
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -207,7 +245,7 @@ body{
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: #FAC705;
 }
 
 /* Fading animation */
