--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -68,18 +68,18 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="cellRow serviceCards" style="width: 100%; overflow: scroll; margin-top: 20px;"
+                    <div style="width: 100%; overflow: scroll; margin-top: 20px;"
                         v-for="(serviceCategory, vehicleCategoryType) in servicesList">
 
                         <div class="cellrow">
-                            <h5>{{serviceCategory.VehicleCategoryTypeName}}</h5>
+                            <h5 class="ind">{{serviceCategory.VehicleCategoryTypeName}}</h5>
                         </div>
-                        <div class="cellrow">
-                            <div class="cellCol" v-for="(service, vehicleCategoryType) in serviceCategory.services"
-                                style="padding: 5px; border: 1px solid #ddd;flex: 0 0 12%;">
+                        <div class="cellrow res">
+                            <div class="cellCol respno" v-for="(service, vehicleCategoryType) in serviceCategory.services"
+                                style="padding: 5px">
 
                                 <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
-                                    class="serviceCardImg" @click="showMoreInfo(service)" height="150" width="200">
+                                    class="serviceCardImg" @click="showMoreInfo(service)" height="auto" width="100%">
                                 <div class="serviceName">
                                     <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
                                     <span class="mt-3" style="font-weight: 500;">Starting from ₹
